# rfortune

./: .gitignore  Cargo.toml  README.md  Rocket.toml
src/: args.rs  database.rs  main.rs  quotes.rs  routes.rs
static/: quotes.csv
templates/: 404.html.tera  add.html.tera  api.html.tera  index.html.tera  layout.html.tera  list.html.tera
