[package]
name = "rocket_fortune"
version = "0.5.0"
authors = ["SilverWingedSeraph <lfstindall@gmail.com>"]

[dependencies]
rocket = "^0.2"
rocket_codegen = "^0.2"

rand = "^0.3"
rusqlite = "^0.11"


serde = "^0.9"
serde_derive = "^0.9"
serde_json = "^0.9"

[dependencies.rocket_contrib]
version = "^0.2"
default_features = false
features = ["tera_templates", "json"]
